Changes on version 1.1.2 (current):
- Split C++ and Objective-C implementation.

Changes on version 1.0.15:
- Update all tests, documentation and usage.

Changes on version 1.0.14:
- Add tests XCode project.

Changes on version 1.0.12:
- Number compare fix.

Changes on version 1.0.7:
- Thread safe C++ implementation.

Changes on version 1.0.5:
- Static initialisers.
- ARC support.

Changes on version 1.0.3:
- String value getter.

Changes on version 1.0.2:
- mutableCopy implementation.

Changes on version 1.0.0:
- Initial logic based on NSNumber.