@@ -1,5 +1,7 @@
+# OS X
+.DS_Store
+
 # Xcode
-#
 build/
 *.pbxuser
 !default.pbxuser
@@ -10,17 +12,23 @@ build/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata
+*.xcuserdata
 *.xccheckout
+profile
 *.moved-aside
 DerivedData
 *.hmap
 *.ipa
-*.xcuserstate
 
-# CocoaPods
-#
+# Bundler
+.bundle
+
+Carthage
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
+# 
+# Note: if you ignore the Pods directory, make sure to uncomment
+# `pod install` in .travis.yml
 #
-#Pods/
+# Pods/
