@@ -1,4 +1,7 @@
-Changes on version 1.1.2 (current):
+Changes on version 1.1.3 (current):
+- Tests small fix.
+
+Changes on version 1.1.2:
 - Split C++ and Objective-C implementation.
 
 Changes on version 1.0.15:
